Download images from AWS

--- a/Frontend/index2.html
+++ b/Frontend/index2.html
@@ -17,12 +17,13 @@
 <div>
 <h3 style="text-align: center;">Download your file from the link below</h3>
 <!-- <div class="container" style="position: relative;"> -->
-<div class="downloadFile"><a href="http://ec2-16-171-25-139.eu-north-1.compute.amazonaws.com:5000/download" target="_blank">Download File</a></div>
+<div class="downloadFile"><a id="downloadAnchorTag" href="" target="_blank">Download File</a></div>
 </div>
 
 <div id="backHome"><a href="index.html"><button>Back to Home</button></a></div>
 </div>
 
 <!-- </div> -->
+<script src="index2.js"></script>
 </body>
 </html>
