--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -62,6 +62,14 @@
 
           <input type="radio" id="grayscale" name="option" value="gray_scale" />
           <label for="grayscale">To Grayscale</label>
+
+          <input
+            type="radio"
+            id="hist_equalize"
+            name="option"
+            value="hist_equalize"
+          />
+          <label for="hist_equalize">Histogram Equalization</label>
         </div>
       </div>
 
