--- a/Frontend/index2.html
+++ b/Frontend/index2.html
@@ -14,15 +14,16 @@
 </div>
 <hr>
 
-<div>
-<h3 style="text-align: center;">Download your file from the link below</h3>
+<div class="dcont">
+<h3 style="text-align: center;">Thanks for using ImageWorks! </h3><h3>Download your file(s) from the link below</h3>
 <!-- <div class="container" style="position: relative;"> -->
-<div class="downloadFile"><a id="downloadAnchorTag" href="" target="_blank">Download File</a></div>
-</div>
+
+<div class="downloadFile"><a id="downloadAnchorTag" href="" target="_blank">Download</a></div>
+
 
 <div id="backHome"><a href="index.html"><button>Back to Home</button></a></div>
 </div>
-
+</div>
 <!-- </div> -->
 <script src="index2.js"></script>
 </body>
